[project]
name = "zipcode-decoder-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yangzhengca", email = "yangzhengca@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.12.3",
    "requests>=2.31.0",
]

[project.scripts]
zipcode-decoder-mcp = "zipcode_decoder_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
