[project]
name = "zipcode-decoder-mcp"
version = "0.1.3"
description = "A Model Control Protocol (MCP) server that provides US zipcode lookup functionality. It can be used to decode zipcodes into city and state information."
readme = "README.md"
authors = [
    { name = "Yang" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.12.3",
    "requests>=2.31.0",
]

[project.scripts]
zipcode-decoder-mcp = "zipcode_decoder_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
